# capsule-watch

./: .gitignore  README.md  pyproject.toml
config/: config.example.yaml
deploy/systemd/: capsule-watch-alert.service  capsule-watch-alert.timer  capsule-watch-collector.service  capsule-watch-collector.timer  capsule-watch-web.service
docs/: configure-rsync-backup-on-ubuntu.md  disk-formatting-for-time-machine.md  diy-time-capsule-setup.md  install-capsule-watch.md  rsync-backups-from-macos.md  time-machine-retention-and-rollover.md  verify-and-restore-rsync-backups.md  verify-and-restore-time-machine-backups.md  zfs-replication-and-rotation.md  zfs-snapshot-retention-and-pruning.md
docs/development/: README.md  architecture.md  development-standards.md  development-workflow.md  implementation-plan.md  local-development.md  macos-rsync-automation-handoff.md  parallel-time-machine-rsync-zfs-design.md  product-brief.md  recovery-assistant-design.md  setup-guide-plan.md
docs/development/adrs/: 0001-stack-and-delivery.md
src/capsule_watch/: __init__.py  alerts.py  collectors.py  config.py  parsers.py  snapshot.py  web.py
src/capsule_watch/templates/: dashboard.html  recovery.html
tests/: test_alerts.py  test_collectors.py  test_config.py  test_parsers.py  test_snapshot.py  test_web.py
tests/fixtures/: df_pk.txt  df_pt.txt  free_m.txt  smartctl_health_failed.txt  smartctl_health_passed.txt  smartctl_scan.txt  tune2fs.txt
